--- a/advertise.html
+++ b/advertise.html
@@ -22,14 +22,14 @@
 	<header>
 		<a href="#" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
-            <li><a href="index.html"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
-            <li><a href="#"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
-            <li><a href="support.html"><i class='bx bx-support' ></i><span>Support</span></a></li>
-            <li><a href="about.html"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
+            <li><a href="index.html" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
+            <li><a href="#" aria-label="Read more"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
+            <li><a href="support.html" aria-label="Read more"><i class='bx bx-support' ></i><span>Support</span></a></li>
+            <li><a href="about.html" aria-label="Read more"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
         </ul>
         <div class="other">
-            <a href="login.html" class="btn">Login</a>
-            <a href="signup.html" class="btn2">Get Started</a>
+            <a href="login.html" class="btn" aria-label="Read more">Login</a>
+            <a href="signup.html" class="btn2" aria-label="Read more">Get Started</a>
             <div class="line">
                 <img src="assets/img/line.png" alt="#">
             </div>
@@ -41,7 +41,7 @@
             <h1>Our Services</h1>
             <h2>Grow your startup with our Service</h2>
             <p>A service agency with customer satisfaction</p>
-            <a href="login.html" class="getbtn">Get Started</a>
+            <a href="login.html" class="getbtn" aria-label="Read more">Get Started</a>
         </div>
         <div class="adver-img">
             <img src="assets/img/DigitalMarketer1.png" alt="#">
@@ -87,7 +87,7 @@
                     <div class="details">
                         <h1>Marketing & advertising</h1>
                         <p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
-                        <a href="details.html">Learn More <i class='bx bxs-chevron-right' ></i></a>
+                        <a href="details.html" aria-label="Read more">Learn More <i class='bx bxs-chevron-right' ></i></a>
                     </div>
                     
                 </div>
@@ -97,7 +97,7 @@
                     <div class="details">
                         <h1>Ultimate development</h1>
                         <p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
-                        <a href="details.html">Learn More <i class='bx bxs-chevron-right' ></i></a>
+                        <a href="details.html" aria-label="Read more">Learn More <i class='bx bxs-chevron-right' ></i></a>
                     </div>
                 </div>
 
@@ -106,7 +106,7 @@
                     <div class="details">
                         <h1>Business Enterprise</h1>
                         <p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
-                        <a href="details.html">Learn More <i class='bx bxs-chevron-right' ></i></a>
+                        <a href="details.html" aria-label="Read more">Learn More <i class='bx bxs-chevron-right' ></i></a>
                     </div>
                 </div>
 
@@ -115,7 +115,7 @@
                     <div class="details">
                         <h1>Marketing & advertising</h1>
                         <p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
-                        <a href="details.html">Learn More <i class='bx bxs-chevron-right' ></i></a>
+                        <a href="details.html" aria-label="Read more">Learn More <i class='bx bxs-chevron-right' ></i></a>
                     </div>
                 </div>
 
@@ -124,7 +124,7 @@
                     <div class="details">
                         <h1>Ultimate development</h1>
                         <p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
-                        <a href="details.html">Learn More <i class='bx bxs-chevron-right' ></i></a>
+                        <a href="details.html" aria-label="Read more">Learn More <i class='bx bxs-chevron-right' ></i></a>
                     </div>
                 </div>
 
@@ -133,7 +133,7 @@
                     <div class="details">
                         <h1>Business Enterprise</h1>
                         <p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
-                        <a href="details.html">Learn More <i class='bx bxs-chevron-right' ></i></a>
+                        <a href="details.html" aria-label="Read more">Learn More <i class='bx bxs-chevron-right' ></i></a>
                     </div>
                 </div>
             </div>
@@ -154,9 +154,9 @@
                     <h1>Emmalee Mclain</h1>
                     <p>Customer</p>
                     <div class="icons">
-                        <a href="#"><i class='bx bxs-star' ></i></a>
-                        <a href="#"><i class='bx bxs-star' ></i></a>
-                        <a href="#"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
                     </div>
                 </div>
             </div>
@@ -169,10 +169,10 @@
                     <h1>Emmalee Mclain</h1>
                     <p>Customer</p>
                     <div class="icons">
-                        <a href="#"><i class='bx bxs-star' ></i></a>
-                        <a href="#"><i class='bx bxs-star' ></i></a>
-                        <a href="#"><i class='bx bxs-star' ></i></a>
-                        <a href="#"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
                     </div>
                 </div>
             </div>
@@ -185,10 +185,10 @@
                     <h1>Emmalee Mclain</h1>
                     <p>Customer</p>
                     <div class="icons">
-                        <a href="#"><i class='bx bxs-star' ></i></a>
-                        <a href="#"><i class='bx bxs-star' ></i></a>
-                        <a href="#"><i class='bx bxs-star' ></i></a>
-                        <a href="#"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
                     </div>
                 </div>
             </div>
@@ -201,9 +201,9 @@
                     <h1>Emmalee Mclain</h1>
                     <p>Customer</p>
                     <div class="icons">
-                        <a href="#"><i class='bx bxs-star' ></i></a>
-                        <a href="#"><i class='bx bxs-star' ></i></a>
-                        <a href="#"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxs-star' ></i></a>
                     </div>
                 </div>
             </div>
@@ -231,44 +231,44 @@
     <footer>
         <div class="rows">
             <div class="copy">
-                <a href="#" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
+                <a href="#" class="logo" aria-label="Read more"><img src="assets/img/Group.png" alt="#">Innovations</a>
                 <h1>Terms of use   |   Privacy</h1>
                 <p>Copyright by 2019 YourName, Inc</p>
             </div>
             <div class="det-foot">
                 <h1>About Us</h1>
                 <ul>
-                    <li><a href="#">Support Center</a></li>
-                    <li><a href="#">Customer Support</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Copyright</a></li>
+                    <li><a href="#" aria-label="Read more">Support Center</a></li>
+                    <li><a href="#" aria-label="Read more">Customer Support</a></li>
+                    <li><a href="#" aria-label="Read more">About Us</a></li>
+                    <li><a href="#" aria-label="Read more">Copyright</a></li>
                 </ul>
             </div>
             <div class="det-foot">
                 <h1>Our Information</h1>
                 <ul>
-                    <li><a href="#">Return Policy</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Site Map</a></li>
+                    <li><a href="#" aria-label="Read more">Return Policy</a></li>
+                    <li><a href="#" aria-label="Read more">Privacy Policy</a></li>
+                    <li><a href="#" aria-label="Read more">Terms & Conditions</a></li>
+                    <li><a href="#" aria-label="Read more">Site Map</a></li>
                 </ul>
             </div>
             <div class="det-foot">
                 <h1>My Account</h1>
                 <ul>
-                    <li><a href="#">Press inquiries</a></li>
-                    <li><a href="#">Social media</a></li>
-                    <li><a href="#">directories</a></li>
-                    <li><a href="#">Images & B-roll</a></li>
+                    <li><a href="#" aria-label="Read more">Press inquiries</a></li>
+                    <li><a href="#" aria-label="Read more">Social media</a></li>
+                    <li><a href="#" aria-label="Read more">directories</a></li>
+                    <li><a href="#" aria-label="Read more">Images & B-roll</a></li>
                 </ul>
             </div>
             <div class="det-foot">
                 <h1>Connect</h1>
                 <ul>
-                    <li><a href="#"><img src="assets/img/Group-3.png" alt="#">Facebook</a></li>
-                    <li><a href="#"><img src="assets/img/Group22.png" alt="#">Twitter</a></li>
-                    <li><a href="#"><img src="assets/img/Group-1.png" alt="#">Github</a></li>
-                    <li><a href="#"><img src="assets/img/Group-2.png" alt="#">Dribble</a></li>
+                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group-3.png" alt="#">Facebook</a></li>
+                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group22.png" alt="#">Twitter</a></li>
+                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group-1.png" alt="#">Github</a></li>
+                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group-2.png" alt="#">Dribble</a></li>
                 </ul>
             </div>
         </div>
