--- a/login.html
+++ b/login.html
@@ -22,14 +22,14 @@
 	<header>
 		<a href="#" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
-            <li><a href="index.html"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
-            <li><a href="advertise.html"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
-            <li><a href="support.html"><i class='bx bx-support' ></i><span>Support</span></a></li>
-            <li><a href="about.html"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
+            <li><a href="index.html" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
+            <li><a href="advertise.html" aria-label="Read more"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
+            <li><a href="support.html" aria-label="Read more"><i class='bx bx-support' ></i><span>Support</span></a></li>
+            <li><a href="about.html" aria-label="Read more"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
         </ul>
         <div class="other">
-            <a href="#" class="btn">Login</a>
-            <a href="#" class="btn2">Get Started</a>
+            <a href="#" class="btn" aria-label="Read more">Login</a>
+            <a href="#" class="btn2" aria-label="Read more">Get Started</a>
             <div class="line">
                 <img src="assets/img/line.png" alt="#">
             </div>
@@ -45,11 +45,11 @@
                     <input type="email" placeholder="E-mail" required>
                     <input type="password" placeholder="Password" required>
                     <button type="submit">Login</button>
-                    <a href="#"><img src="assets/img/google.png" alt="#"><span>Login With Google Account</span></a>
+                    <a href="#"><img src="assets/img/google.png" alt="#" aria-label="Read more"><span>Login With Google Account</span></a>
                 </form>
                 <div class="reg">
                     <h1>Don't Have an Account !</h1>
-                    <a href="signup.html">Sign up</a>
+                    <a href="signup.html" aria-label="Read more">Sign up</a>
                 </div>
             </div>
             <div class="det">
