--- a/signup.html
+++ b/signup.html
@@ -20,16 +20,16 @@
 <body>
 	<!--header--->
 	<header>
-		<a href="#" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
+		<a href="#" class="logo" aria-label="Read more"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
-            <li><a href="index.html"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
-            <li><a href="advertise.html"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
-            <li><a href="support.html"><i class='bx bx-support' ></i><span>Support</span></a></li>
-            <li><a href="about.html"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
+            <li><a href="index.html" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
+            <li><a href="advertise.html" aria-label="Read more"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
+            <li><a href="support.html" aria-label="Read more"><i class='bx bx-support' ></i><span>Support</span></a></li>
+            <li><a href="about.html" aria-label="Read more"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
         </ul>
         <div class="other">
-            <a href="login.html" class="btn">Login</a>
-            <a href="#" class="btn2">Get Started</a>
+            <a href="login.html" class="btn" aria-label="Read more">Login</a>
+            <a href="#" class="btn2" aria-label="Read more">Get Started</a>
             <div class="line">
                 <img src="assets/img/line.png" alt="#">
             </div>
@@ -51,7 +51,7 @@
                 </form>
                 <div class="reg">
                     <h1>Already Have an Account !</h1>
-                    <a href="login.html">Sign in</a>
+                    <a href="login.html" aria-label="Read more">Sign in</a>
                 </div>
             </div>
             <div class="det">
