--- a/details.html
+++ b/details.html
@@ -20,16 +20,16 @@
 <body>
 	<!--header--->
 	<header>
-		<a href="#" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
+		<a href="#" class="logo" aria-label="Read more"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
-            <li><a href="index.html"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
-            <li><a href="advertise.html"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
-            <li><a href="support.html"><i class='bx bx-support' ></i><span>Support</span></a></li>
-            <li><a href="about.html"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
+            <li><a href="index.html" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
+            <li><a href="advertise.html" aria-label="Read more"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
+            <li><a href="support.html" aria-label="Read more"><i class='bx bx-support' ></i><span>Support</span></a></li>
+            <li><a href="about.html" aria-label="Read more"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
         </ul>
         <div class="other">
-            <a href="#" class="btn">Login</a>
-            <a href="#" class="btn2">Get Started</a>
+            <a href="#" class="btn" aria-label="Read more">Login</a>
+            <a href="#" class="btn2" aria-label="Read more">Get Started</a>
             <div class="line">
                 <img src="assets/img/line.png" alt="#">
             </div>
@@ -149,41 +149,49 @@
         </div>
     </section>
 
-<footer>
-    <div class="rows">
-        <div class="copy">
-            <a href="#" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
-            <h1>Terms of use   |   Privacy</h1>
-            <p>Copyright by 2019 YourName, Inc</p>
+    <footer>
+        <div class="rows">
+            <div class="copy">
+                <a href="#" class="logo" aria-label="Read more"><img src="assets/img/Group.png" alt="#">Innovations</a>
+                <h1>Terms of use   |   Privacy</h1>
+                <p>Copyright by 2019 YourName, Inc</p>
+            </div>
+            <div class="det-foot">
+                <h1>About Us</h1>
+                <ul>
+                    <li><a href="#" aria-label="Read more">Support Center</a></li>
+                    <li><a href="#" aria-label="Read more">Customer Support</a></li>
+                    <li><a href="#" aria-label="Read more">About Us</a></li>
+                    <li><a href="#" aria-label="Read more">Copyright</a></li>
+                </ul>
+            </div>
+            <div class="det-foot">
+                <h1>Our Information</h1>
+                <ul>
+                    <li><a href="#" aria-label="Read more">Return Policy</a></li>
+                    <li><a href="#" aria-label="Read more">Privacy Policy</a></li>
+                    <li><a href="#" aria-label="Read more">Terms & Conditions</a></li>
+                    <li><a href="#" aria-label="Read more">Site Map</a></li>
+                </ul>
+            </div>
+            <div class="det-foot">
+                <h1>My Account</h1>
+                <ul>
+                    <li><a href="#" aria-label="Read more">Press inquiries</a></li>
+                    <li><a href="#" aria-label="Read more">Social media</a></li>
+                    <li><a href="#" aria-label="Read more">directories</a></li>
+                    <li><a href="#" aria-label="Read more">Images & B-roll</a></li>
+                </ul>
+            </div>
+            <div class="det-foot">
+                <h1>Connect</h1>
+                <ul>
+                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group-3.png" alt="#">Facebook</a></li>
+                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group22.png" alt="#">Twitter</a></li>
+                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group-1.png" alt="#">Github</a></li>
+                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group-2.png" alt="#">Dribble</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="det-foot">
-            <h1>About Us</h1>
-            <li><a href="#">Support Center</a></li>
-            <li><a href="#">Customer Support</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Copyright</a></li>
-        </div>
-        <div class="det-foot">
-            <h1>Our Information</h1>
-            <li><a href="#">Return Policy</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms & Conditions</a></li>
-            <li><a href="#">Site Map</a></li>
-        </div>
-        <div class="det-foot">
-            <h1>My Account</h1>
-            <li><a href="#">Press inquiries</a></li>
-            <li><a href="#">Social media</a></li>
-            <li><a href="#">directories</a></li>
-            <li><a href="#">Images & B-roll</a></li>
-        </div>
-        <div class="det-foot">
-            <h1>Connect</h1>
-            <li><a href="#"><img src="assets/img/Group-3.png" alt="#">Facebook</a></li>
-            <li><a href="#"><img src="assets/img/Group22.png" alt="#">Twitter</a></li>
-            <li><a href="#"><img src="assets/img/Group-1.png" alt="#">Github</a></li>
-            <li><a href="#"><img src="assets/img/Group-2.png" alt="#">Dribble</a></li>
-        </div>
-    </div>
-</footer>
+    </footer>
 </body>    
